# py-RAT

./: .gitignore  .pre-commit-config.yaml  README.md  art.txt  pyproject.toml
src/rat/: fart.txt  run_client.py  run_server.py
src/rat/client/: client.py  keylogger_service.py  screenshot_service.py  system_info.py
src/rat/commands/: base_command.py  command_registry.py  download.py  hashdump.py  help.py  ipconfig.py  keylogger.py  screenshot.py  search.py  shell.py  upload.py
src/rat/server/: _build_upload_payload.py  server.py  sessions.py
src/rat/utils/: .logger.py.swp  logger.py
tests/: test_download.py  test_ipconfig.py  test_keylogger.py  test_screenshot.py  test_search.py  test_upload.py
