[project]
name = "rat"
version = "0.1.0"
description = ""
authors = [
    {name = "FERNANDO Rafael aka Rafjt sur Github",email = "r.fernando@myskolae.fr"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography (>=46.0.6,<47.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "numpy (>=2.4.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "rat", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
