[tool.poetry]
name = "rat"
version = "0.1.0"
description = ""
authors = ["FERNANDO Rafael <r.fernando@myskolae.fr>"]
packages = [{ include = "rat", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

cryptography = "^46.0.6"
opencv-python = "^4.13.0.92"
pillow = "^12.1.1"
pynput = "^1.8.1"
sounddevice = "^0.5.5"
numpy = "^2.4.4"
mss = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pre-commit = "^4.5.1"
black = "^26.3.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
